--- a/Main Road/Base.lproj/Main.storyboard
+++ b/Main Road/Base.lproj/Main.storyboard
@@ -25,10 +25,50 @@
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1mP-ix-U7H">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="448"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Main Road" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="abW-O8-DC0">
+                                        <rect key="frame" x="0.0" y="174" width="414" height="100"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="100" id="X0L-5w-QnL"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="abW-O8-DC0" secondAttribute="trailing" id="Ps8-6e-9a0"/>
+                                    <constraint firstItem="abW-O8-DC0" firstAttribute="leading" secondItem="1mP-ix-U7H" secondAttribute="leading" id="nHe-Jg-E4b"/>
+                                    <constraint firstItem="abW-O8-DC0" firstAttribute="centerY" secondItem="1mP-ix-U7H" secondAttribute="centerY" id="tZS-QR-eKa"/>
+                                </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BG6-6H-npq">
                                 <rect key="frame" x="0.0" y="448" width="414" height="448"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kdF-Xr-oN9">
+                                        <rect key="frame" x="142" y="159" width="130" height="130"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="130" id="Kk3-QK-c62"/>
+                                            <constraint firstAttribute="width" constant="130" id="uCX-Tj-UHq"/>
+                                        </constraints>
+                                        <state key="normal" title="Start">
+                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="kdF-Xr-oN9" firstAttribute="centerX" secondItem="BG6-6H-npq" secondAttribute="centerX" id="W1I-n1-KCt"/>
+                                    <constraint firstItem="kdF-Xr-oN9" firstAttribute="centerY" secondItem="BG6-6H-npq" secondAttribute="centerY" id="tGR-FD-yog"/>
+                                </constraints>
                             </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_mainCar" translatesAutoresizingMaskIntoConstraints="NO" id="pYk-ba-xzf">
+                                <rect key="frame" x="107" y="338" width="200" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="QB7-kJ-WFL"/>
+                                    <constraint firstAttribute="width" constant="200" id="azr-da-Jxg"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.098082549869999994" green="0.26281177999999999" blue="0.28423666949999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -40,7 +80,9 @@
                             <constraint firstItem="SRS-wg-avH" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="KI6-cv-7jx"/>
                             <constraint firstItem="SRS-wg-avH" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="LNr-GJ-s8e"/>
                             <constraint firstItem="BG6-6H-npq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="QIB-tR-EtU"/>
+                            <constraint firstItem="pYk-ba-xzf" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="UX0-xP-YTA"/>
                             <constraint firstItem="1mP-ix-U7H" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="ccC-T4-qG4"/>
+                            <constraint firstItem="pYk-ba-xzf" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-10" id="dEg-ie-zbe"/>
                             <constraint firstItem="BG6-6H-npq" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.5" id="hht-Dn-GiT"/>
                             <constraint firstItem="1mP-ix-U7H" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="hlN-tj-OAL"/>
                             <constraint firstAttribute="bottom" secondItem="BG6-6H-npq" secondAttribute="bottom" id="xiF-Rp-opf"/>
@@ -72,6 +114,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="ic_mainCar" width="1000" height="1000"/>
         <systemColor name="systemRedColor">
             <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
