--- a/Main Road/Base.lproj/Main.storyboard
+++ b/Main Road/Base.lproj/Main.storyboard
@@ -50,7 +50,7 @@
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="130" id="Kk3-QK-c62"/>
-                                            <constraint firstAttribute="width" constant="130" id="uCX-Tj-UHq"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="130" id="uCX-Tj-UHq"/>
                                         </constraints>
                                         <state key="normal" title="Start">
                                             <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -89,6 +89,12 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="jIP-ag-AU0"/>
+                    <connections>
+                        <outlet property="carImageView" destination="pYk-ba-xzf" id="tVs-dQ-AiL"/>
+                        <outlet property="lineView" destination="SRS-wg-avH" id="Y1C-Ab-HyW"/>
+                        <outlet property="startButton" destination="kdF-Xr-oN9" id="TVw-Mu-kMq"/>
+                        <outlet property="titleLabel" destination="abW-O8-DC0" id="0ex-hF-8fs"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
