--- a/Main Road/RaceViewController.storyboard
+++ b/Main Road/RaceViewController.storyboard
@@ -15,18 +15,57 @@
                     <view key="view" contentMode="scaleToFill" id="Uhi-1d-sOx">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_road3" translatesAutoresizingMaskIntoConstraints="NO" id="b5e-Q9-qqO">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RLI-cQ-dbb">
+                                <rect key="frame" x="0.0" y="0.0" width="50" height="896"/>
+                                <color key="backgroundColor" systemColor="systemGreenColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="Mpi-bo-vHZ"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aSz-uF-zOp">
+                                <rect key="frame" x="364" y="0.0" width="50" height="896"/>
+                                <color key="backgroundColor" systemColor="systemGreenColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="5of-Fd-emb"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="W3Q-lO-Mpe"/>
                         <color key="backgroundColor" systemColor="systemGrayColor"/>
+                        <constraints>
+                            <constraint firstItem="b5e-Q9-qqO" firstAttribute="leading" secondItem="W3Q-lO-Mpe" secondAttribute="leading" id="03x-aI-j34"/>
+                            <constraint firstItem="RLI-cQ-dbb" firstAttribute="top" secondItem="Uhi-1d-sOx" secondAttribute="top" id="2NS-BS-iXj"/>
+                            <constraint firstItem="RLI-cQ-dbb" firstAttribute="leading" secondItem="W3Q-lO-Mpe" secondAttribute="leading" id="7Xv-X0-ff5"/>
+                            <constraint firstItem="b5e-Q9-qqO" firstAttribute="top" secondItem="Uhi-1d-sOx" secondAttribute="top" id="Mcu-i6-mTK"/>
+                            <constraint firstAttribute="bottom" secondItem="RLI-cQ-dbb" secondAttribute="bottom" id="RCb-sx-RgW"/>
+                            <constraint firstItem="aSz-uF-zOp" firstAttribute="trailing" secondItem="W3Q-lO-Mpe" secondAttribute="trailing" id="Wuw-t0-G5C"/>
+                            <constraint firstItem="aSz-uF-zOp" firstAttribute="top" secondItem="Uhi-1d-sOx" secondAttribute="top" id="cUJ-pC-IAy"/>
+                            <constraint firstAttribute="bottom" secondItem="aSz-uF-zOp" secondAttribute="bottom" id="gQC-Yi-EZl"/>
+                            <constraint firstItem="b5e-Q9-qqO" firstAttribute="trailing" secondItem="W3Q-lO-Mpe" secondAttribute="trailing" id="si0-uY-Idx"/>
+                            <constraint firstAttribute="bottom" secondItem="b5e-Q9-qqO" secondAttribute="bottom" id="uZp-PC-NMp"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="leftGrassView" destination="RLI-cQ-dbb" id="BhL-pR-tuP"/>
+                        <outlet property="rightGrassView" destination="aSz-uF-zOp" id="Eo0-0j-BKG"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dYa-3X-dOv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="58" y="90"/>
+            <point key="canvasLocation" x="57.971014492753625" y="89.732142857142847"/>
         </scene>
     </scenes>
     <resources>
+        <image name="ic_road3" width="353.5" height="568"/>
         <systemColor name="systemGrayColor">
             <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
