--- a/Main Road/RaceViewController.storyboard
+++ b/Main Road/RaceViewController.storyboard
@@ -16,7 +16,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_road3" translatesAutoresizingMaskIntoConstraints="NO" id="b5e-Q9-qqO">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_road" translatesAutoresizingMaskIntoConstraints="NO" id="b5e-Q9-qqO">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RLI-cQ-dbb">
@@ -73,7 +73,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="ic_road3" width="353.5" height="568"/>
+        <image name="ic_road" width="353.5" height="568"/>
         <systemColor name="systemGrayColor">
             <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
