--- a/Main Road/ViewControllers/Welcome Screen/Base.lproj/Main.storyboard
+++ b/Main Road/ViewControllers/Welcome Screen/Base.lproj/Main.storyboard
@@ -128,21 +128,36 @@
             </objects>
             <point key="canvasLocation" x="1021.7391304347827" y="77.678571428571431"/>
         </scene>
-        <!--Records View Controller-->
+        <!--Records-->
         <scene sceneID="Vsz-hG-hnm">
             <objects>
-                <viewController id="9iQ-Y9-BIN" customClass="RecordsViewController" customModule="Main_Road" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Records" id="9iQ-Y9-BIN" customClass="RecordsViewController" customModule="Main_Road" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ZCQ-Al-HbQ">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="SBi-09-Aco">
+                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="3BN-kA-BO1"/>
                         <color key="backgroundColor" systemColor="systemOrangeColor"/>
+                        <constraints>
+                            <constraint firstItem="SBi-09-Aco" firstAttribute="top" secondItem="3BN-kA-BO1" secondAttribute="top" id="EN9-Oy-8dy"/>
+                            <constraint firstAttribute="bottom" secondItem="SBi-09-Aco" secondAttribute="bottom" id="Sj6-DG-cF2"/>
+                            <constraint firstItem="SBi-09-Aco" firstAttribute="leading" secondItem="3BN-kA-BO1" secondAttribute="leading" id="t0N-gm-9tA"/>
+                            <constraint firstItem="SBi-09-Aco" firstAttribute="trailing" secondItem="3BN-kA-BO1" secondAttribute="trailing" id="yOy-BM-rE8"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="SRO-X4-JYX"/>
+                    <navigationItem key="navigationItem" title="Records" id="SRO-X4-JYX"/>
+                    <connections>
+                        <outlet property="recordsTableView" destination="SBi-09-Aco" id="5jN-9p-i4p"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HpI-ur-Tb0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1880" y="466"/>
+            <point key="canvasLocation" x="1879.7101449275365" y="465.40178571428567"/>
         </scene>
         <!--Settings View Controller-->
         <scene sceneID="QM8-5k-ms5">
@@ -285,6 +300,9 @@
         <image name="ic_mainCar" width="1000" height="1000"/>
         <image name="ic_tyres" width="419.5" height="385.5"/>
         <image name="ic_yellowCar" width="444" height="939.5"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemGreenColor">
             <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
